<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="32dp"
            android:text="@string/register_title_label"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ivUsername"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="12"
            android:inputType="text"
            android:hint="@string/username_label_et"
            android:textColorHint="@color/blacky"
            android:textColor="@color/blacky"
            app:layout_constraintBottom_toBottomOf="@+id/ivUsername"
            app:layout_constraintEnd_toEndOf="@+id/ivUsername"
            app:layout_constraintStart_toStartOf="@+id/ivUsername"
            app:layout_constraintTop_toTopOf="@id/ivUsername" />

        <ImageView
            android:id="@+id/ivUsername"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_text_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="12"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail_label_et"
            android:textColorHint="@color/blacky"
            android:textColor="@color/blacky"
            app:layout_constraintBottom_toBottomOf="@+id/ivEmail"
            app:layout_constraintEnd_toEndOf="@+id/ivEmail"
            app:layout_constraintStart_toStartOf="@+id/ivEmail"
            app:layout_constraintTop_toTopOf="@id/ivEmail" />

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_text_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUsername"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="12"
            android:inputType="textPassword"
            android:hint="@string/password_label_et"
            android:textColorHint="@color/blacky"
            android:textColor="@color/blacky"
            app:layout_constraintBottom_toBottomOf="@+id/ivPassword"
            app:layout_constraintEnd_toEndOf="@+id/ivPassword"
            app:layout_constraintStart_toStartOf="@+id/ivPassword"
            app:layout_constraintTop_toTopOf="@id/ivPassword" />

        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_text_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivEmail"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etConfirmationPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="12"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_label_et"
            android:textColorHint="@color/blacky"
            android:textColor="@color/blacky"
            app:layout_constraintBottom_toBottomOf="@+id/ivConfirmationPassword"
            app:layout_constraintEnd_toEndOf="@+id/ivConfirmationPassword"
            app:layout_constraintStart_toStartOf="@+id/ivConfirmationPassword"
            app:layout_constraintTop_toTopOf="@id/ivConfirmationPassword" />

        <ImageView
            android:id="@+id/ivConfirmationPassword"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_text_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPassword"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/ic_button"
            android:text="@string/register_label_btn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivConfirmationPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>